add test conditions, generate list of test cases based on test conditions, update template
