# swagger_server/models/__init__.py
@@ -6,3 +6,4 @@ from __future__ import absolute_import
 from swagger_server.models.cert_created import CertCreated
 from swagger_server.models.create_cert import CreateCert
 from swagger_server.models.server_info import ServerInfo
+from swagger_server.models.test_case_list import TestCaseList
